--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
 aiocryptopay
-aiohappyeyeballs==2.4.3
-aiohttp==3.11.2
-aiosignal==1.3.1
-annotated-types==0.7.0
-attrs==24.2.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-frozenlist==1.5.0
-idna==3.10
-multidict==6.1.0
-propcache==0.2.0
-pydantic==2.9.2
-pydantic_core==2.23.4
-pyTelegramBotAPI==4.24.0
-python-dotenv==1.0.1
-requests==2.32.3
-typing_extensions==4.12.2
-urllib3==2.2.3
-yarl==1.17.2
+aiohappyeyeballs
+aiohttp
+aiosignal
+annotated-types
+attrs
+certifi
+charset-normalizer
+frozenlist
+idna
+multidict
+propcache
+pydantic
+pydantic_core
+pyTelegramBotAPI
+python-dotenv
+requests
+typing_extensions
+urllib3
+yarl
